--- a/NttData.FileManagement.Presentation.WinSite/App.config
+++ b/NttData.FileManagement.Presentation.WinSite/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+	<appSettings>
+		<add key="StudentFilePath" value="C:\Users\lausilva\NttData\FileManagement\NttData.FileManagement\NttData.FileManagement.Presentation.WinSite\bin\Debug\Student.txt"/>
+	</appSettings>
 </configuration>
